force-app/main/default/objects/Lead/fields/tempNBvalue__c.field-meta.xml
<CustomField>
    <fullName>tempNBvalue__c</fullName>
    <label>tempNBvalue</label>
    <length>80</length>
    <type>Text</type>
</CustomField>