force-app/main/default/objects/Lead/fields/tempXBvalue__c.field-meta.xml
<CustomField>
    <fullName>tempXBvalue__c</fullName>
    <label>tempXBvalue</label>
    <length>80</length>
    <type>Text</type>
</CustomField>