force-app/main/default/objects/Lead/fields/Ticket_medio__c.field-meta.xml
<CustomField>
    <fullName>Ticket_medio__c</fullName>
    <label>Ticket Médio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>