force-app/main/default/objects/Lead/fields/TPV_Potencial__c.field-meta.xml
<CustomField>
    <fullName>TPV_Potencial__c</fullName>
    <label>TPV Potencial</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>