force-app/main/default/objects/Lead/fields/Transacoes_mensais__c.field-meta.xml
<CustomField>
    <fullName>Transacoes_mensais__c</fullName>
    <label>Número de Transações Mensais</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>