force-app/main/default/objects/Lead/fields/Use_Apple_Pay__c.field-meta.xml
<CustomField>
    <fullName>Use_Apple_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apple Pay</label>
    <type>Checkbox</type>
</CustomField>