force-app/main/default/objects/Lead/fields/Use_Google_Pay__c.field-meta.xml
<CustomField>
    <fullName>Use_Google_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Google Pay</label>
    <type>Checkbox</type>
</CustomField>