force-app/main/default/objects/Lead/fields/Use_One_Click_Pix__c.field-meta.xml
<CustomField>
    <fullName>Use_One_Click_Pix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1-Click Pix</label>
    <type>Checkbox</type>
</CustomField>