force-app/main/default/objects/Lead/fields/Use_Pagshield__c.field-meta.xml
<CustomField>
    <fullName>Use_Pagshield__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PagShield</label>
    <type>Checkbox</type>
</CustomField>