force-app/main/default/objects/Lead/fields/Use_Pagshield_Premium_on_Demand__c.field-meta.xml
<CustomField>
    <fullName>Use_Pagshield_Premium_on_Demand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PagShield Premium on Demand</label>
    <type>Checkbox</type>
</CustomField>