force-app/main/default/objects/Lead/fields/Use_Pagstream__c.field-meta.xml
<CustomField>
    <fullName>Use_Pagstream__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PagStream</label>
    <type>Checkbox</type>
</CustomField>