force-app/main/default/objects/Lead/fields/Use_Payout__c.field-meta.xml
<CustomField>
    <fullName>Use_Payout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payout</label>
    <type>Checkbox</type>
</CustomField>