force-app/main/default/objects/Lead/fields/ValidadeCPFauxiliar__c.field-meta.xml
<CustomField>
    <fullName>ValidadeCPFauxiliar__c</fullName>
    <formula>IF (ISPICKVAL(TemValidadeCPF__c  , &apos;Sim&apos;), 0, 2 )</formula>
    <label>Validade de CPF (auxiliar)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>