force-app/main/default/objects/Lead/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <label>Fiscal Number</label>
    <type>TextArea</type>
</CustomField>