force-app/main/default/objects/Lead/fields/Vender_ao_Brasil__c.field-meta.xml
<CustomField>
    <fullName>Vender_ao_Brasil__c</fullName>
    <label>Vender ao Brasil?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>