force-app/main/default/objects/Lead/fields/xb_receita_mensal__c.field-meta.xml
<CustomField>
    <fullName>xb_receita_mensal__c</fullName>
    <description>Faixa de faturamento mensal das oportunidades internacionais, em U$.</description>
    <inlineHelpText>Faixa de faturamento mensal das oportunidades internacionais, em U$.</inlineHelpText>
    <label>Receita mensal XB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>