force-app/main/default/objects/Lead/recordTypes/Cross_border.recordType-meta.xml
<RecordType>
    <fullName>Cross_border</fullName>
    <active>true</active>
    <businessProcess>Cross-border</businessProcess>
    <label>Cross-border</label>
</RecordType>