force-app/main/default/objects/Lead/recordTypes/National.recordType-meta.xml
<RecordType>
    <fullName>National</fullName>
    <active>true</active>
    <businessProcess>National</businessProcess>
    <label>National</label>
</RecordType>