force-app/main/default/objects/Lead/validationRules/ImpedirConversao_data_de_agendamento.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedirConversao_data_de_agendamento</fullName>
    <active>true</active>
    <description>Permitir a conversão de um lead para oportunidade apenas com uma data de agendamento.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &apos;Closed - Converted&apos;),
    ISCHANGED(Status),
    ISBLANK(DataAgendamento__c)
)</errorConditionFormula>
    <errorDisplayField>DataAgendamento__c</errorDisplayField>
    <errorMessage>Preencha o campo &quot;Data de agendamento&quot;.</errorMessage>
</ValidationRule>