force-app/main/default/objects/Lead/validationRules/ImpedirConversao_operacao.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedirConversao_operacao</fullName>
    <active>true</active>
    <description>Impedir conversão se o campo operação estiver vazio.</description>
    <errorConditionFormula>AND ( 
				ISPICKVAL (Status , &apos;Closed - Not converted&apos;) ,
  	 ISBLANK (TEXT(Operacao__c) )
				)</errorConditionFormula>
    <errorDisplayField>Operacao__c</errorDisplayField>
    <errorMessage>Preencha o campo &quot;Operação&quot; para salvar o registro.</errorMessage>
</ValidationRule>