force-app/main/default/objects/Lead/validationRules/ImpedirConversao_previsaofaturamento.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedirConversao_previsaofaturamento</fullName>
    <active>true</active>
    <description>Permitir a conversão de um lead para oportunidade apenas com uma data de agendamento.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &apos;Closed - Converted&apos;),
    ISCHANGED(Status),
    ISBLANK(previs_fat_rs__c)
)</errorConditionFormula>
    <errorDisplayField>previs_fat_rs__c</errorDisplayField>
    <errorMessage>Preencha o campo &quot;Previsão de faturamento (R$)&quot;.</errorMessage>
</ValidationRule>