force-app/main/default/objects/Lead/validationRules/ImpedirConversao_recorrencia.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedirConversao_recorrencia</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &apos;Closed - Converted&apos;),
ISCHANGED(Status),
ISBLANK (TEXT(Recorrencia__c))
)</errorConditionFormula>
    <errorDisplayField>Recorrencia__c</errorDisplayField>
    <errorMessage>Por favor, preencha o campo &quot;Recorrência&quot;</errorMessage>
</ValidationRule>