force-app/main/default/objects/Lead/validationRules/ImpedirConversao_tese.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedirConversao_tese</fullName>
    <active>true</active>
    <description>Permitir a conversão de um lead para oportunidade apenas com o campo tese de prospecção preenchido.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &apos;Closed - Converted&apos;),
    ISCHANGED(Status),
    ISBLANK(TeseProspeccao__c)
)</errorConditionFormula>
    <errorDisplayField>TeseProspeccao__c</errorDisplayField>
    <errorMessage>Preencha o campo &quot;Tese de prospecção&quot;.</errorMessage>
</ValidationRule>