force-app/main/default/objects/Lead/validationRules/ImpedirFaseConexao.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedirFaseConexao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Status), &apos;Prospection&apos;),
    ISPICKVAL(Status, &apos;Connection&apos;),
    ISCHANGED(Status),
				CONTAINS(TEXT(Qualificador__c), &apos;Outbound&apos;),
    ISBLANK ( Email   ) || ISBLANK ( Product_or_service_website_URL__c )
)</errorConditionFormula>
    <errorMessage>Para avançar de fase, preencha o Email e o Site da Web.</errorMessage>
</ValidationRule>