force-app/main/default/objects/Lead/validationRules/ImpedirMudacaLeadConverted.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedirMudacaLeadConverted</fullName>
    <active>true</active>
    <description>Impede a modificações no Lead quando o &apos;Lead Status&apos; está como &apos;Closed - Converted&apos;</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Closed - Converted&quot;),
		$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
  NOT(ISNEW()),
  NOT(ISCHANGED(IsConverted)) 
)</errorConditionFormula>
    <errorMessage>O Lead se encontra com o &apos;Lead Status&apos; como &apos;Closed - Converted&apos; não sendo possível modifica-lo</errorMessage>
</ValidationRule>