force-app/main/default/objects/Lead/validationRules/LossReason.validationRule-meta.xml
<ValidationRule>
    <fullName>LossReason</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
				ISPICKVAL (Status , &apos;Closed - Not converted&apos;) ,
  	 ISBLANK (TEXT(LossReason__c) )
				)</errorConditionFormula>
    <errorDisplayField>LossReason__c</errorDisplayField>
    <errorMessage>Preencha o campo para salvar o registro.</errorMessage>
</ValidationRule>