force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>Telefone__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Qualificador__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos os Leads Abertos</label>
</ListView>