force-app/main/default/objects/Lead/listViews/Director_Lead.listView-meta.xml
<ListView>
    <fullName>Director_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Director</label>
    <queue>Director</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>