force-app/main/default/objects/Lead/listViews/Leads_Alessandra.listView-meta.xml
<ListView>
    <fullName>Leads_Alessandra</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>AT</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Pre prospection,Prospection,Connection,Scheduling,NoShow,Nutrition</value>
    </filters>
    <label>Leads Alessandra</label>
</ListView>