force-app/main/default/objects/Lead/listViews/Leads_Anderson.listView-meta.xml
<ListView>
    <fullName>Leads_Anderson</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TeseProspeccao__c</columns>
    <filterScope>Mine</filterScope>
    <label>Leads João</label>
</ListView>