force-app/main/default/objects/Lead/listViews/Leads_Lucas_C.listView-meta.xml
<ListView>
    <fullName>Leads_Lucas_C</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>LC</value>
    </filters>
    <filters>
        <field>Recorrencia__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Leads Lucas C</label>
</ListView>