force-app/main/default/objects/Lead/listViews/Leads_Pagbrasil_com.listView-meta.xml
<ListView>
    <fullName>Leads_Pagbrasil_com</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Qualificador__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Leads Pagbrasil.com</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>2/1/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>contains</operation>
        <value>Pre prospection,Prospection,Connection,Scheduling,No Show,Nutrition,Closed - Converted,Closed - Not converted</value>
    </filters>
    <label>Leads Pagbrasil.com</label>
</ListView>