force-app/main/default/objects/Lead/listViews/Leads_Pr_Vendas_Gabriele.listView-meta.xml
<ListView>
    <fullName>Leads_Pr_Vendas_Gabriele</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Nutrition,Closed - Not converted</value>
    </filters>
    <label>Leads | Pré-Vendas | Gabriele</label>
</ListView>