force-app/main/default/objects/Lead/listViews/Leads_Pr_Vendas_Hellena.listView-meta.xml
<ListView>
    <fullName>Leads_Pr_Vendas_Hellena</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>4/1/2024 12:00 AM</value>
    </filters>
    <label>Leads Pré-Vendas | Hellena</label>
</ListView>