force-app/main/default/objects/Lead/listViews/Leads_Priorit_rios_SDR_PB.listView-meta.xml
<ListView>
    <fullName>Leads_Priorit_rios_SDR_PB</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>contains</operation>
        <value>Zoho</value>
    </filters>
    <label>Leads Prioritários - SDR_PB</label>
</ListView>